fixed loader bug, word wrap bug fixed

--- a/src/components/UI/itemFromLocalStorage/itemFromLocalStorage.module.scss
+++ b/src/components/UI/itemFromLocalStorage/itemFromLocalStorage.module.scss
@@ -5,10 +5,10 @@
     @apply absolute top-5 right-5 text-3xl;
   }
   .item {
-    @apply w-40 flex bg-slate-600 rounded-xl m-3 justify-center h-24 items-center cursor-pointer shadow-lg p-3;
+    @apply w-40 flex bg-slate-600 rounded-xl m-3 justify-center h-36 items-center cursor-pointer shadow-lg p-3;
 
     .cityNameItem {
-      @apply text-2xl font-semibold;
+      @apply text-2xl font-semibold break-all;
     }
   }
 }
