--- a/src/components/UI/navbar/Navbar.module.scss
+++ b/src/components/UI/navbar/Navbar.module.scss
@@ -1,5 +1,5 @@
-nav{
-  @apply flex items-center flex-col  py-5 w-full h-full shadow-lg rounded-xl;
+nav {
+  @apply flex items-center flex-col py-5 w-full shadow-lg rounded-b-xl bg-slate-600;
   .list {
     @apply flex w-full justify-evenly ;
     .item {
